<resources>
    <string name="app_name">Feira</string>
    <string name="frutas">Frutas</string>
    <string name="verduras">Verduras</string>
    <string name="carnes">Carnes</string>
    <string name="graos">Grãos</string>
    <string name="sobre">Sobre</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="todas">Todas</string>
    <string name="outros">Outros</string>
    <string name="ok">OK</string>
    <string name="msg_sobre">Aplicativo desenvolvido por Sanatiel Barros, Alyson Brito e Samuel Porto</string>
    <string name="menu_editar">Editar</string>
    <string name="menu_deletar">Deletar</string>
    
    <string name="nome">Nome</string>
    <string name="local">Local</string>
    <string name="preco">Preço</string>
    <string name="categoria">Categoria</string>
    <string name="cadastrar">Cadastrar</string>


</resources>
